--- a/react_blog_vite/src/App.css
+++ b/react_blog_vite/src/App.css
@@ -27,13 +27,12 @@ body{
   border-bottom: solid #b9c6e0;
   width: 100%;
   position: fixed;
-  gap: 20px;
-  margin-top: 40px;
   background-color: rgba(34, 40, 49);
   margin-top: 0;
   padding-top: opx;
   padding-right: 30px;
-  gap: 80px;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 .first,.second, .third, .fourth{
@@ -67,9 +66,7 @@ body{
   margin-top: 230px;
   margin-bottom: 500px;
 }
-.introduce1{
 
-}
 .introduce2{
   margin-top: 20px;
 }
