--- a/react_blog_vite/src/routes/javascript.css
+++ b/react_blog_vite/src/routes/javascript.css
@@ -4,8 +4,6 @@ html{
   padding: 0;
 }
 body{
-    display: flex;
-    justify-content: center;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-style: normal;
@@ -39,19 +37,27 @@ body{
     color: #b9c6e0;
     margin-top: 20px;
     margin-bottom: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .h1{
     font-size: 60px;
     color: #b9c6e0;
+    width: 1200px;
     margin-top: 200px;
     margin-bottom: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .h2{
     font-size: 35px;
     color: #b9c6e0;
+    width: 1200px;
     font-weight: bold;
     margin-top: 100px;
     margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .l{
     color: #b9c6e0;
@@ -65,4 +71,14 @@ body{
     margin-left: auto;
     margin-top: 150px;
     padding-bottom: 200px;
+}
+.p{
+    display: flex;
+    justify-content: center;
+    width: 1200px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding-right: 700px;
+    margin-left: auto;
+    margin-right: auto;
 }
